# OHR

./: CMakeLists.txt  main.cpp  readme.md
HTMLDocument/: CMakeLists.txt  HTMLDocument.cpp  HTMLDocument.h
HTMLElement/: CMakeLists.txt  HTMLElement.cpp  HTMLElement.h
RectDetector/: CMakeLists.txt  RectDetector.cpp  RectDetector.h
WordDetector/: CMakeLists.txt  WordDetector.cpp  WordDetector.h
